<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".display_movie">
    <TextView
            android:id="@+id/DisplayTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Title"/>

    <TextView
            android:id="@+id/DisplayMovieName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/DisplayDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Desc"/>

    <TextView
            android:id="@+id/DisplayMovieDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtMovieReview"/>

    <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:isIndicator="true"
            android:visibility="gone"/>

    <TextView
            android:id="@+id/DisplayReview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Review"/>

    <TextView
            android:id="@+id/DisplayReviewDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/DisplayLang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Lang"/>

    <TextView
            android:id="@+id/DisplayMovieLang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/DisplayRelease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Release"/>

    <TextView
            android:id="@+id/DisplayMovieRelease"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/DisplayAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Age"/>

    <TextView
            android:id="@+id/DisplaySuitableAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</LinearLayout>